# devops-practice-api

./: Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_tasks_table.py
app/: config.py  database.py  logging_config.py  main.py  models.py  schemas.py
app/routers/: __init__.py  health.py  tasks.py
scripts/: smoke_test.sh
tests/: test_health.py
