[project]
name = "devops-practice-api"
version = "0.1.0"
description = "Small FastAPI + PostgreSQL service for DevOps internship practice"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "SQLAlchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.6,<3.0",
    "alembic>=1.14,<2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.8,<1.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
